# hammster

./: next.config.js  package.json  readme.md
circuits/: Cargo.toml
circuits/.cargo/: config
circuits/src/: hammster.rs  lib.rs  main.rs  wasm.rs
src/components/: BinaryInput.tsx  HammingDistance.tsx  ProveForm.tsx  VerifyForm.tsx
src/lib/wasm/: README.md  hammster.d.ts  hammster.js  hammster_bg.wasm  hammster_bg.wasm.d.ts  package.json
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css
