[package]
name = "halo2_hammster"
version = "0.1.0"
edition = "2021"

[lib]
name = "hammster"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
extend = "1.2.0"
halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
plotters = "0.3.4"
rand_core = "0.6.4"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
